# wed

./: meson.build
src/: EntryMain.cxx  entry_test.cxx
src/Platform/: LocateFont.hxx  LocateFontCoreText.cxx  LocateFontFontConfig.cxx  VirtualMemory.hxx  VirtualMemoryPosix.cxx
src/Render/: BitMatrix2D.hxx  GlyphAtlas.cxx  GlyphAtlas.hxx  RenderContext.cxx  RenderContext.hxx  RenderFont.cxx  RenderFont.hxx  Shader.cxx  Shader.hxx  TileMap.cxx  TileMap.hxx  Types.hxx  VertexFormat.cxx  VertexFormat.hxx
src/TextBuffer/: AppendBuffer.hxx  AppendBufferTest.cxx  ConstView.hxx  InsertAt.ipp  TextBuffer.cxx  TextBuffer.hxx  TextBufferTest.cxx  iterator.cxx
src/UI/: Backend.cxx  Backend.hxx  Font.cxx  GlyphCache.hxx  Render.hxx  View.hxx  ViewEditor.cxx  ViewEditor.hxx
src/UI/Render/: RenderContext.hxx
src/Util/: Assert.cxx  Assert.hxx  Hash.hxx
subprojects/: sdl2.wrap
